# lysa

./: .gitignore  CMakeLists.txt  CMakePresets.json  EULA.txt  NOTICE.txt  README.md  privacy.txt
qml/: MenuButton.qml  SwipeAnimation.qml  ToolBar.qml  UI.qml  main.qml  photo.qml  qml.qrc  qmldir  settings.qml
resources/: icon.rc
src/: appsettings.cpp  appsettings.h  directorymodel.cpp  directorymodel.h  exifregistry.cpp  exifregistry.h  fileservice.h  gallerymodel.cpp  gallerymodel.h  main.cpp  photocontroller.cpp  photocontroller.h  photomodel.cpp  photomodel.h  photoprovider.cpp  photoprovider.h  structs.h  thumbnailworker.cpp  thumbnailworker.h
